@@ -78,17 +78,31 @@ PROJECT(LIBNIFALCON)
 #options
 
 OPTION(DEBUG_BUILD "Compile libnifalcon in debug mode" OFF)
+OPTION(FAST_MATH "Use -ffast-math for GCC 4.0" ON)
+OPTION(ARCH_OPTS "Use architecture specific optimizations for GCC" ON)
 
 IF(DEBUG_BUILD)
   SET(CMAKE_BUILD_TYPE "Debug")
 #  SET(LIBNIFALCON_POSTFIX "_d")
   SET(CMAKE_VERBOSE_MAKEFILE ON)
   IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG}" -ggdb")
+    SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} "-ggdb")
   ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 ELSE(DEBUG_BUILD)
   SET(CMAKE_BUILD_TYPE "Release")
 ENDIF(DEBUG_BUILD)
+
+IF(FAST_MATH)
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ffast-math")
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -ffast-math")
+ENDIF(FAST_MATH)
+
+IF(ARCH_OPTS)
+  EXECUTE_PROCESS(COMMAND "${CMAKE_MODULE_PATH}gcccpuopt.sh" RESULT_VARIABLE CPU_RESULT OUTPUT_VARIABLE CPU_OPT ERROR_VARIABLE CPU_ERR OUTPUT_STRIP_TRAILING_WHITESPACE ERROR_STRIP_TRAILING_WHITESPACE)
+  MESSAGE(STATUS "Processor optimizations: ${CPU_OPT}")
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${CPU_OPT}")
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${CPU_OPT}")
+ENDIF(ARCH_OPTS)
 
 #finds for libnifalcon building
 
