@@ -12,6 +12,7 @@
  *
  */
 #include "FalconFirmwareNovintSDK.h"
+#include <iostream>
 #include <cstdlib>
 
 namespace libnifalcon
@@ -77,12 +78,48 @@ namespace libnifalcon
 		//Receive information from the falcon
 		if(m_hasWritten)
 		{
+			//The packet buffer no one uses. D:
+			//Right now, to get a packet buffer working, I need to know how many bytes
+			//are waiting for me from the falcon. FTD2XX implements this by running
+			//a thread under the covers to buffer to the host side, then letting anything
+			//accessing the driver read from that. libftdi has no such facility, meaning that
+			//to figure out whether or not there's anything left to get, you have to do a bulk
+			//read, at the cost of 1ms. This upsets the falcon badly. In a
+			//perfect world, I'd just use libusb 1.0 and its non-blocking functionality,
+			//which means I could both maintain a buffer and not have to worry about
+			//thread off libftdi. But, for right now, this all will just stay commented out.
+			//I/O works "well enough" as is, you only lose 5% or so of packets.
+			/*
+			uint8_t o[16];
+			while(1)
+			{
+				m_falconComm->read(o, 16);
+				if(m_falconComm->getLastBytesRead() == 0) break;
+				if(m_packetBuffer.size() < m_packetBufferSize)
+				{
+					m_packetBuffer.push_back(o);
+				}
+				else
+				{
+					break;
+				}
+				if(m_packetBuffer.size() == m_packetBufferSize) break;
+			}
+			if(m_packetBuffer.size() > 0)
+			{				
+				memcpy((void*)m_rawOutput, (void*)m_packetBuffer.front(), 16);
+				m_packetBuffer.pop_front();
+				formatOutput();
+				m_hasWritten = false;
+				read_successful = true;
+			}
+			*/
 			if(m_falconComm->read((uint8_t*)m_rawOutput, (uint32_t)16))
 			{
 				formatOutput();
 				m_hasWritten = false;
 				read_successful = true;
-			}
+			}			
 		}
 		//Send information to the falcon
 		formatInput();
