@@ -2,6 +2,12 @@ libnifalcon ChangeLog
 =====================
 
 2008-10-11 Kyle Machulis <kyle@nonpolynomial.com>
+	* Release v1 alpha 4
+	* More cmake file condensing
+	* Fixed comparison bug in FalconGripFourButton
+	* Added CPU specific optimizations for option for GCC builds
+	* Added Fast Math optimization option for GCC >= 4.0	
+2008-10-11 Kyle Machulis <kyle@nonpolynomial.com>
 	* Release v1 alpha 3
 	* Overhauled cmake files to make building cleaner
 	* Renamed c libraries to libnifalcon_c
